[project]
name = "mobts"
version = "0.1.1"
description = "Mobility time series package for preprocessing, imputing, and analyzing mobility count observation data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ali SHATERI BENAM" }
]
dependencies = [
    "pandas",
    "numpy",
    "statsmodels",
    "scikit-learn",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://mobidec.github.io/mobts/index.html"
Repository = "https://github.com/Mobidec/mobts.git"
Issues = "https://github.com/Mobidec/mobts/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "build",
    "twine",
    "ruff",
    "sphinx",
    "sphinx_design",
    "furo",
    "sphinx_autopackagesummary",
    "sphinxcontrib-napoleon",
    "numpydoc",
    "myst_nb",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mobts" = []

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 140
exclude = []

[tool.ruff.lint]
extend-select = [
  "UP",
  "E501",
  "I",
  "B",
  "F",
  "E",
  "N",
  "A",
  "PL",
  "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true